src/app/shopping-cart/shopping-cart.component.css
.item-img{
  cursor: pointer;
  width: 100%;
  height: 100%;
  transition: transform 0.3s ease;
}

.item-img:hover{
  transform: scale(1.05);
}


/* .btn{
    background-color: #cf9e65;
    border: none;
}

.btn:hover{
    background-color: #977248;
} */


.card{
    width: 400px;
    height: fit-content;
}

input[type="number"].form-control {
  text-align: center !important;
  padding-left: 16px !important;
  width: 50px;
}



.btn {
  background-color: #cf9e65; 
  border-bottom: none;
  transition: background-color 0.3s ease;
}

.btn:hover {
  background-color: #977248 !important;
}


.nav-item .nav-link {
  color: #977248;
  transition: color 0.3s ease;

}

.nav-item .nav-link:hover,
.nav-item .nav-link.active {
  color: #cf9e65;
}

